--- a/src/app/Vistas/nav/nav.component.html
+++ b/src/app/Vistas/nav/nav.component.html
@@ -18,15 +18,15 @@
                     <li class="nav-item" style="padding-left: 1cm;">
                         <a class="nav-link" routerLink="/sensores">Sensores</a>
                     </li>
-                    <li class="nav-item" style="padding-left: 1cm;">
-                        <a class="nav-link" routerLink="/mapa">Documentacion</a>
+                     <li class="nav-item" style="padding-left: 1cm;">
+                        <a class="nav-link" routerLink="/docu">Documentacion</a>
                     </li>
                     <li class="nav-item" style="padding-left: 1cm;">
-                        <a class="nav-link" routerLink="/about">Historial</a>
+                        <a class="nav-link" routerLink="/historial">Historial</a>
                     </li>
                     <li class="nav-item" style="padding-left: 1cm;">
-                        <a class="nav-link" routerLink="/about">Graficas</a>
-                    </li>
+                        <a class="nav-link" routerLink="/grafi">Graficas</a>
+                    </li> 
                     
                     
                 </ul>
