--- a/src/app/Vistas/inicio/inicio.component.html
+++ b/src/app/Vistas/inicio/inicio.component.html
@@ -15,7 +15,7 @@
         <img src="../../assets/img/2.png" height="500" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../../assets/img/2.png">
+        <img src="../../assets/img/3.jpg">
       </div>
     </div> 
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
