--- a/src/app/Vistas/sensores/sensores.component.html
+++ b/src/app/Vistas/sensores/sensores.component.html
@@ -18,7 +18,7 @@
           <br>
               <button (click)="crearSensor()" (click)="showModal()" class="btn btn-primary">Guardar</button>
               <p> </p>
-              <a  class="btn btn-danger" routerLink="/administrador">Cancelar</a>
+              <a  class="btn btn-danger" routerLink="/sensores">Cancelar</a>
       </form>
         <!--AQUI ES UN FORMULARIO -->
       <h3>Sensores</h3>
